---------------------------------------------------------------------------
Version 3.21.6  [DEVEL] (rgerhards), 2008-10-??
---------------------------------------------------------------------------
Version 3.21.5  [DEVEL] (rgerhards), 2008-09-30
- performance optimization: unnecessary time() calls during message
  parsing removed - thanks to David Lang for his excellent performance
  analysis
- added new capability to property replacer: multiple immediately
  successive field delimiters are treated as a single one.
  Thanks to Zhuang Yuyao for the patch.
- added message property "inputname", which contains the name of the
  input (module) that generated it. Presence is depending on suport in
  each input module (else it is blank).
- added system property "$myhostname", which contains the name of the
  local host as it knows itself.
- imported a number of fixes and enhancements from the stable and
  devel branches, including a fix to a potential segfault on HUP
  when using UDP listners
- re-enabled gcc builtin atomic operations and added a proper
  ./configure check
- bugfix: potential race condition when adding messages to queue
  There was a wrong order of mutex lock operations. It is hard to
  believe that really caused problems, but in theory it could and with
  threading we often see that theory becomes practice if something is only
  used long enough on a fast enough machine with enough CPUs ;)
- cleaned up internal debug system code and made it behave better
  in regard to multi-threading
---------------------------------------------------------------------------
Version 3.21.4  [DEVEL] (rgerhards), 2008-09-04
- removed compile time fixed message size limit (was 2K), limit can now
  be set via $MaxMessageSize global config directive (finally gotten rid
  of MAXLINE ;))
- enhanced doc for $ActionExecOnlyEveryNthTimeTimeout
- integrated a number of patches from 3.18.4, namely
  - bugfix: order-of magnitude issue with base-10 size definitions