@@ -269,7 +269,6 @@ CODESTARTrunInput
 		pMsg->iFacility = LOG_FAC(pri);
 		pMsg->iSeverity = LOG_PRI(pri);
 		pMsg->bParseHOSTNAME = 0;
-		getCurrTime(&(pMsg->tTIMESTAMP)); / * use the current time! * /
 		flags |= INTERNAL_MSG;
 		logmsg(pMsg, flags); / * some time, CHKiRet() will work here, too [today NOT!] * /
 		 * 
