@@ -1,5 +1,9 @@
 ---------------------------------------------------------------------------
 Version 3.21.6  [DEVEL] (rgerhards), 2008-10-??
+- consolidated time calls during msg object creation, improves performance
+  and consistency
+- bugfix: subsecond time properties generated by imfile, imklog and
+  internal messages could be slightly inconsistent
 ---------------------------------------------------------------------------
 Version 3.21.5  [DEVEL] (rgerhards), 2008-09-30
 - performance optimization: unnecessary time() calls during message
